# face-recognizer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: CMakeLists.txt  main.cpp
src/common/: Application.cpp  Application.hpp  ArgsInterpreter.cpp  ArgsInterpreter.hpp  ArgsParser.cpp  ArgsParser.hpp  CMakeLists.txt  Constants.hpp  Enums.hpp  Logger.cpp  Logger.hpp  UUID.cpp  UUID.hpp
src/common/application/: Application.cpp  Application.hpp  ApplicationExecutorFactory.cpp  ApplicationExecutorFactory.hpp  IApplication.hpp  IApplicationExecutor.hpp  PersonRecognitionExecutor.cpp  PersonRecognitionExecutor.hpp  PersonRegistrationExecutor.cpp  PersonRegistrationExecutor.hpp  PersonRemovalExecutor.cpp  PersonRemovalExecutor.hpp  PhotosApplicationExecutor.cpp  PhotosApplicationExecutor.hpp
src/cvDomain/: CMakeLists.txt  CameraFramesReceiver.cpp  CameraFramesReceiver.hpp  Constants.hpp  Enums.hpp  FrameSourcesReceiver.cpp  FrameSourcesReceiver.hpp  IFrameReceiver.hpp
src/services/: ArgsInterpreter.cpp  ArgsInterpreter.hpp  CMakeLists.txt  Constants.hpp  DBManager.cpp  DBManager.hpp  EnumNamesProvider.cpp  EnumNamesProvider.hpp  Enums.hpp  IService.hpp  LogService.cpp  LogService.hpp  PathProvider.cpp  PathProvider.hpp  ServicesLocator.hpp
src/services/database/: Constants.hpp  DBManager.cpp  DBManager.hpp
